--- a/Makefile.in
+++ b/Makefile.in
@@ -160,7 +160,7 @@ PKG_CFLAGS	= @PKG_CFLAGS@
 DEFS		= @DEFS@ $(PKG_CFLAGS)
 
 # Move pkgIndex.tcl to 'BINARIES' var if it is generated in the Makefile
-CONFIG_CLEAN_FILES = Makefile
+CONFIG_CLEAN_FILES = Makefile pkgIndex.tcl udpUuid.h
 CLEANFILES	= @CLEANFILES@
 
 CPPFLAGS	= @CPPFLAGS@
@@ -345,17 +345,16 @@ $(PKG_STUB_LIB_FILE): $(PKG_STUB_OBJECTS)
 #========================================================================
 
 # Create header file with fossil, git, or svn UUID for build-info command 
-manifest.uuid:
-	@echo "Make manifest.uuid"
-	printf "git-" >manifest.uuid
-	(git rev-parse HEAD >>manifest.uuid || \
-	    (printf "svn-r" >manifest.uuid ; \
-	    svn info --show-item last-changed-revision >>manifest.uuid) || \
-	    printf "unknown" >manifest.uuid)
+$(srcdir)/manifest.uuid:
+	printf "git-" >$(srcdir)/manifest.uuid
+	(cd $(srcdir); git rev-parse HEAD >>$(srcdir)/manifest.uuid || \
+	    (printf "svn-r" >$(srcdir)/manifest.uuid ; \
+	    svn info --show-item last-changed-revision >>$(srcdir)/manifest.uuid) || \
+	    printf "unknown" >$(srcdir)/manifest.uuid)
 
-udpUuid.h: manifest.uuid
+udpUuid.h: $(srcdir)/manifest.uuid
 	echo "#define UDP_VERSION_UUID \\" >$@
-	cat manifest.uuid >>$@
+	cat $(srcdir)/manifest.uuid >>$@
 	echo "" >>$@
 
 #========================================================================
@@ -388,8 +387,7 @@ udp_tcl.@OBJEXT@:	udpUuid.h
 # the configure script output the pkgIndex.tcl by editing configure.in.
 #========================================================================
 
-pkgIndex.tcl: pkgIndex.tcl.in
-	@echo "make pkgIndex.tcl"
+pkgIndex.tcl: $(srcdir)/pkgIndex.tcl.in
 	cd $(top_builddir) \
 	  && CONFIG_FILES=$@ CONFIG_HEADERS= $(SHELL) ./config.status
 
@@ -489,7 +487,7 @@ install-lib-binaries: binaries
 	done
 	@if test "x$(SHARED_BUILD)" = "x1"; then \
 	    echo " Install pkgIndex.tcl $(DESTDIR)$(pkglibdir)"; \
-	    $(INSTALL_DATA) pkgIndex.tcl "$(DESTDIR)$(pkglibdir)"; \
+	    $(INSTALL_DATA) $(srcdir)/pkgIndex.tcl "$(DESTDIR)$(pkglibdir)"; \
 	fi
 	@if test -f "$(srcdir)/udpConfig.sh"; then \
 	    $(INSTALL_DATA) $(srcdir)/udpConfig.sh $(DESTDIR)$(libdir); \
