--- a/Makefile.in
+++ b/Makefile.in
@@ -487,7 +487,7 @@ install-lib-binaries: binaries
 	done
 	@if test "x$(SHARED_BUILD)" = "x1"; then \
 	    echo " Install pkgIndex.tcl $(DESTDIR)$(pkglibdir)"; \
-	    $(INSTALL_DATA) $(srcdir)/pkgIndex.tcl "$(DESTDIR)$(pkglibdir)"; \
+	    $(INSTALL_DATA) pkgIndex.tcl "$(DESTDIR)$(pkglibdir)"; \
 	fi
 	@if test -f "$(srcdir)/udpConfig.sh"; then \
 	    $(INSTALL_DATA) $(srcdir)/udpConfig.sh $(DESTDIR)$(libdir); \
