--- a/Makefile.in
+++ b/Makefile.in
@@ -264,7 +264,7 @@ install-libraries: libraries
 install-doc-html: make-docs-html
 	@$(INSTALL_DATA_DIR) "$(DESTDIR)$(pkglibdir)/html"
 	@echo "Installing HTML documentation in $(DESTDIR)$(pkglibdir)/html"
-	@list='doc/*.html'; for i in $$list; do \
+	@list='$(srcdir)/doc/*.html'; for i in $$list; do \
 	    if test -f $$i ; then \
 		echo "Installing $$i"; \
 		$(INSTALL_DATA) $$i "$(DESTDIR)$(pkglibdir)/html"; \
@@ -274,7 +274,7 @@ install-doc-html: make-docs-html
 install-doc-n: make-docs-n
 	@$(INSTALL_DATA_DIR) "$(DESTDIR)$(mandir)/mann"
 	@echo "Installing nroff documentation in $(DESTDIR)$(mandir)/mann"
-	@list='doc/*.n'; for i in $$list; do \
+	@list='$(srcdir)/doc/*.n'; for i in $$list; do \
 	    if test -f $$i ; then \
 		if test -f "$(DESTDIR)$(mandir)/mann/Tcl.n.gz" -o \
 		    "$(DESTDIR)$(mandir)/mann/Tcl*.n.gz" ; then \
@@ -419,7 +419,7 @@ dist: dist-clean manifest.uuid
 		$(srcdir)/license.terms $(srcdir)/manifest.uuid \
 		$(srcdir)/README.txt $(srcdir)/pkgIndex.tcl.in $(DIST_DIR)/
 
-	list='demos doc generic tclconfig tests win'; \
+	list='demos doc generic library tclconfig macosx tests unix win'; \
 	for p in $$list; do \
 	    if test -d $(srcdir)/$$p ; then \
 		$(INSTALL_DATA_DIR) $(DIST_DIR)/$$p; \
@@ -511,7 +511,7 @@ install-bin-binaries: binaries
 	  fi; \
 	done
 
-Makefile: Makefile.in  $(top_builddir)/config.status
+Makefile: $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) \
 	  && CONFIG_FILES=$@ CONFIG_HEADERS= $(SHELL) ./config.status
 
